mobile design done

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         </div>
         <div class="period-div">
           <button type="button">Daily</button>
-          <button type="button">Weekly</button>
+          <button type="button" class="active">Weekly</button>
           <button type="button">Monthly</button>
         </div>
       </header>
       <main>
-        <div class="work">
+        <div class="card work">
           <div class="img-wrapper-div">
             <img src="images/icon-work.svg" alt="work icon" />
           </div>
@@ -49,79 +49,92 @@
             <p>Last Week - 36hrs</p>
           </div>
         </div>
+        <div class="card play">
+          <div class="img-wrapper-div">
+            <img src="images/icon-play.svg" alt="play icon" />
+          </div>
+          <div class="data-div">
+            <p>Play</p>
+            <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill="#BBC0FF"
+                fill-rule="evenodd"
+              />
+            </svg>
+            <p>10hrs</p>
+            <p>Last Week - 8hrs</p>
+          </div>
+        </div>
+        <div class="card study">
+          <div class="img-wrapper-div">
+            <img src="images/icon-study.svg" alt="study icon" />
+          </div>
+          <div class="data-div">
+            <p>Study</p>
+            <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill="#BBC0FF"
+                fill-rule="evenodd"
+              />
+            </svg>
+            <p>4hrs</p>
+            <p>Last Week - 7hrs</p>
+          </div>
+        </div>
+        <div class="card exercise">
+          <div class="img-wrapper-div">
+            <img src="images/icon-exercise.svg" alt="exercise icon" />
+          </div>
+          <div class="data-div">
+            <p>exercise</p>
+            <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill="#BBC0FF"
+                fill-rule="evenodd"
+              />
+            </svg>
+            <p>4hrs</p>
+            <p>Last Week - 5hrs</p>
+          </div>
+        </div>
 
-        <code>
-          <div class="play">
-            Play 1hr
-            <!-- daily -->
-            Last Week - 2hrs
-            <!-- daily -->
-            10hrs
-            <!-- weekly -->
-            Last Week - 8hrs
-            <!-- weekly -->
-            23hrs
-            <!-- monthly -->
-            Last Week - 29hrs
-            <!-- monthly -->
+        <div class="card social">
+          <div class="img-wrapper-div">
+            <img src="images/icon-social.svg" alt="social icon" />
           </div>
-          <div class="study">
-            Study 0hrs
-            <!-- daily -->
-            Last Week - 1hr
-            <!-- daily -->
-            4hrs
-            <!-- weekly -->
-            Last Week - 7hrs
-            <!-- weekly -->
-            13hrs
-            <!-- monthly -->
-            Last Week - 19hrs
-            <!-- monthly -->
+          <div class="data-div">
+            <p>Social</p>
+            <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill="#BBC0FF"
+                fill-rule="evenodd"
+              />
+            </svg>
+            <p>4hrs</p>
+            <p>Last Week - 5hrs</p>
           </div>
-          <div class="exercise">
-            Exercise 1hr
-            <!-- daily -->
-            Last Week - 1hr
-            <!-- daily -->
-            4hrs
-            <!-- weekly -->
-            Last Week - 5hrs
-            <!-- weekly -->
-            11hrs
-            <!-- monthly -->
-            Last Week - 18hrs
-            <!-- monthly -->
+        </div>
+        <div class="card self-care">
+          <div class="img-wrapper-div">
+            <img src="images/icon-self-care.svg" alt="self care icon" />
           </div>
-          <div class="social">
-            Social 1hr
-            <!-- daily -->
-            Last Week - 3hrs
-            <!-- daily -->
-            5hrs
-            <!-- weekly -->
-            Last Week - 10hrs
-            <!-- weekly -->
-            21hrs
-            <!-- monthly -->
-            Last Week - 23hrs
-            <!-- monthly -->
+          <div class="data-div">
+            <p>Self Care</p>
+            <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill="#BBC0FF"
+                fill-rule="evenodd"
+              />
+            </svg>
+            <p>2hrs</p>
+            <p>Last Week - 2hrs</p>
           </div>
-          <div class="self-care">
-            Self Care 0hrs
-            <!-- daily -->
-            Last Week - 1hr
-            <!-- daily -->
-            2hrs
-            <!-- weekly -->
-            Last Week - 2hrs
-            <!-- weekly -->
-            7hrs
-            <!-- monthly -->
-            Last Week - 11hrs
-            <!-- monthly -->
-          </div>
-        </code>
+        </div>
       </main>
     </div>
   </body>
