finished animation part

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <script src="main.js" defer type="module"></script>
     <title>Frontend Mentor | Time tracking dashboard</title>
@@ -27,7 +31,9 @@
         </div>
         <div class="period-div">
           <button type="button" data-index="daily">Daily</button>
-          <button type="button" data-index="weekly" class="active">Weekly</button>
+          <button type="button" data-index="weekly" class="active">
+            Weekly
+          </button>
           <button type="button" data-index="monthly">Monthly</button>
         </div>
       </header>
@@ -45,8 +51,8 @@
                 fill-rule="evenodd"
               />
             </svg>
-            <p>32hrs</p>
-            <p>Last Week - 36hrs</p>
+            <p class="animate__animated animate__bounce">32hrs</p>
+            <p class="animate__animated animate__bounce">Last Week - 36hrs</p>
           </div>
         </div>
         <div class="card play">
@@ -62,8 +68,8 @@
                 fill-rule="evenodd"
               />
             </svg>
-            <p>10hrs</p>
-            <p>Last Week - 8hrs</p>
+            <p class="animate__animated animate__bounce">10hrs</p>
+            <p class="animate__animated animate__bounce">Last Week - 8hrs</p>
           </div>
         </div>
         <div class="card study">
@@ -79,8 +85,8 @@
                 fill-rule="evenodd"
               />
             </svg>
-            <p>4hrs</p>
-            <p>Last Week - 7hrs</p>
+            <p class="animate__animated animate__bounce">4hrs</p>
+            <p class="animate__animated animate__bounce">Last Week - 7hrs</p>
           </div>
         </div>
         <div class="card exercise">
@@ -96,8 +102,8 @@
                 fill-rule="evenodd"
               />
             </svg>
-            <p>4hrs</p>
-            <p>Last Week - 5hrs</p>
+            <p class="animate__animated animate__bounce">4hrs</p>
+            <p class="animate__animated animate__bounce">Last Week - 5hrs</p>
           </div>
         </div>
 
@@ -114,8 +120,8 @@
                 fill-rule="evenodd"
               />
             </svg>
-            <p>5hrs</p>
-            <p>Last Week - 5hrs</p>
+            <p class="animate__animated animate__bounce">5hrs</p>
+            <p class="animate__animated animate__bounce">Last Week - 5hrs</p>
           </div>
         </div>
         <div class="card self-care">
@@ -131,8 +137,8 @@
                 fill-rule="evenodd"
               />
             </svg>
-            <p>2hrs</p>
-            <p>Last Week - 2hrs</p>
+            <p class="animate__animated animate__bounce">2hrs</p>
+            <p class="animate__animated animate__bounce">Last Week - 2hrs</p>
           </div>
         </div>
       </main>
