--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <img src="images/icon-exercise.svg" alt="exercise icon" />
           </div>
           <div class="data-div">
-            <p>exercise</p>
+            <p>Exercise</p>
             <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
