moved js file down near end of body tag

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <script src="main.js" defer type="module"></script>
+
     <title>Frontend Mentor | Time tracking dashboard</title>
   </head>
   <body>
@@ -143,5 +143,6 @@
         </div>
       </main>
     </div>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
